--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background-image: url('percorso/alla/tuo/immagine.jpg');
+            background-size: cover;
+            background-position: center center;
             margin: 0;
             padding: 0;
         }
