--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('percorso/alla/tuo/immagine.jpg');
+            background-image: url('');
             background-size: cover;
             background-position: center center;
             margin: 0;
