--- a/ordinamentoArray.html
+++ b/ordinamentoArray.html
@@ -55,7 +55,7 @@
 <div class="container">
     <h2>Ordinamento Array</h2>
     <p>Inserisci i numeri separati da spazio (es: 4 2 8 1 7):</p>
-    <input type="text" id="inputNumbers" placeholder="Inserisci numeri">
+    <input type="text" id="inputNum" placeholder="Inserisci numeri">
     <button onclick="ordinaArray()">Ordina Array</button>
 
     
