--- a/ordinamentoArray.html
+++ b/ordinamentoArray.html
@@ -32,7 +32,7 @@
             border-radius: 5px;
         }
         button:hover {
-            background-color: #45a049;
+            background-color: #e80000;
         }
         .output-div {
             margin-top: 20px;
