--- a/ordinamentoArray.html
+++ b/ordinamentoArray.html
@@ -26,13 +26,13 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #e80000;
+            background-color: #dc143c;
             color: white;
             border: none;
             border-radius: 5px;
         }
         button:hover {
-            background-color: #e80000;
+            background-color: #8b0000;
         }
         .output-div {
             margin-top: 20px;
@@ -73,7 +73,7 @@
 <script>
     function ordinaArray() {
         
-        const num = document.getElementById('inputNumbers').value.split(' ').map(Number);
+        const num = document.getElementById('inputNum').value.split(' ').map(Number);
 
 
         
