--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('');
+            background-image: url(https://i.ytimg.com/vi/SJN5ZNZi5j8/maxresdefault.jpg);
             background-size: cover;
             background-position: center center;
             margin: 0;
             padding: 0;
+            background-image: url('');
         }
         header {
             background-color: #4CAF50;
