--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             background-position: center center;
             margin: 0;
             padding: 0;
-            background-image: url(https://i.ytimg.com/vi/SJN5ZNZi5j8/maxresdefault.jpg);
+            background-image: url('https://i.ytimg.com/vi/SJN5ZNZi5j8/maxresdefault.jpg');
         }
         header {
             background-color: #4CAF50;
