--- a/index.html
+++ b/index.html
@@ -42,16 +42,19 @@
 <body>
 
     
-    <h1>Index Laerte Russillo</h1>
+    <h1 style="color:Tomato;">Index Laerte Russillo</h1>
     
 
     <div class="content">
-        <h2>Link ai lavori:</h2>
+        <h2 style="color:Tomato;">Link ai lavori:</h2>
         <ul class="links">
             <li><a href="lavoro1.html">Esempio di html</a></li>
             <li><a href="cicloFor.html">Ciclo for</a></li>
             <li><a href="contaCifre.html">Contatore di cifre</a></li>
             <li><a href="fibb.html">Sequenza di fibbonacci</a></li>
+            <li><a href="ordinamentoArray.html">ordinamento di un array</a></li>
+            <li><a href="stella5punte.html">stella a 5 punte</a></li>
+            <li><a href="tabellaMigranti2.html">Tabella Migranti 2</a></li>
         </ul>
     </div>
 
