--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 <body>
 
     
-    <h1 style="color:Tomato;">Index Laerte Russillo</h1>
+    <h1 style="color:MediumSeaGreen;">Index Laerte Russillo</h1>
     
 
     <div class="content">
-        <h2 style="color:Tomato;">Link ai lavori:</h2>
+        <h2 style="color:MediumSeaGreen;">Link ai lavori:</h2>
         <ul class="links">
                     <li><a href="lavoro1.html">Esempio di html</a></li>
                     <li><a href="cicloFor.html">Ciclo for</a></li>
