--- a/anagrafica1,2.html
+++ b/anagrafica1,2.html
@@ -36,7 +36,7 @@
             };
             
             localStorage.setItem("utente", JSON.stringify(utente));
-            window.location.href = "seconda_pagina.html";
+            window.location.href = "anagrafica2,2.html";
         });
     </script>
 </body>
