--- a/anagrafica1,2.html
+++ b/anagrafica1,2.html
@@ -47,7 +47,7 @@
             datiAccount.push(account);
             document.getElementById("myForm").reset();
             localStorage.setItem("datiAccount", JSON.stringify(datiAccount));
-            window.location.href = "RiceviDati.html";
+            window.location.href = "anagrafica2,2.html";
         }
 	
     </script>
