--- a/anagrafica1,2.html
+++ b/anagrafica1,2.html
@@ -1,4 +1,4 @@
-<-DA FINIRE LA PARTE HTML, SCRIPT OK, CSS MANCA, FINIRE ANCHE L'ALTRO>
+<-DA FINIRE LA PARTE HTML, SCRIPT OK, CSS MANCA, FINIRE ANCHE L'ALTRO->
 	
 <!DOCTYPE html>
 <html lang="it">
