--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <li><a href="ordinamentoArray.html">ordinamento di un array</a></li>
                     <li><a href="stella5punte.html">stella a 5 punte</a></li>
                     <li><a href="tabellaMigranti2.html">Tabella Migranti 2</a></li>
+                    <li><a href="anagrafica3.html">anagrafica con file reader</a></li>
         </ul>
     </div>
 
