--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <li><a href="stella5punte.html">stella a 5 punte</a></li>
                     <li><a href="tabellaMigranti2.html">Tabella Migranti 2</a></li>
                     <li><a href="anagrafica3.html">anagrafica con file reader</a></li>
+                    <li><a href="anagrafica4.html">anagrafica con collection</a></li>
         </ul>
     </div>
 
