--- a/anagrafica4.html
+++ b/anagrafica4.html
@@ -2,33 +2,59 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Inserimento Dati Utente</title>
+    <title>Risultati Utente</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 80%;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #000;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <h1>Inserisci i tuoi dati</h1>
-    <form id="userForm">
-        <label>Nome: <input type="text" id="nome" required></label><br><br>
-        <label>Cognome: <input type="text" id="cognome" required></label><br><br>
-        <label>Età: <input type="number" id="eta" required></label><br><br>
-        <label>Indirizzo: <input type="text" id="indirizzo" required></label><br><br>
-        <button type="submit">Invia</button>
-    </form>
+    <h1>Elenco Utenti Inseriti</h1>
+    <div id="tabellaRisultati"></div>
 
     <script>
-        document.getElementById('userForm').addEventListener('submit', function(e) {
-            e.preventDefault();
+        const utenti = JSON.parse(localStorage.getItem('utenti'));
 
-            const utente = {
-                nome: document.getElementById('nome').value,
-                cognome: document.getElementById('cognome').value,
-                eta: document.getElementById('eta').value,
-                indirizzo: document.getElementById('indirizzo').value
-            };
+        if (utenti && utenti.length > 0) {
+            let tabella = `
+                <table>
+                    <tr>
+                        <th>#</th>
+                        <th>Nome</th>
+                        <th>Cognome</th>
+                        <th>Età</th>
+                        <th>Indirizzo</th>
+                    </tr>
+            `;
 
-            localStorage.setItem('utente', JSON.stringify(utente));
+            utenti.forEach((utente, index) => {
+                tabella += `
+                    <tr>
+                        <td>${index + 1}</td>
+                        <td>${utente.nome}</td>
+                        <td>${utente.cognome}</td>
+                        <td>${utente.eta}</td>
+                        <td>${utente.indirizzo}</td>
+                    </tr>
+                `;
+            });
 
-            window.location.href = "risultati.html";
-        });
+            tabella += `</table>`;
+            document.getElementById('tabellaRisultati').innerHTML = tabella;
+        } else {
+            document.getElementById('tabellaRisultati').innerHTML = "<p>Nessun dato trovato.</p>";
+        }
     </script>
 </body>
 </html>
