--- a/risultati.html
+++ b/risultati.html
@@ -22,6 +22,7 @@
 <body>
     <h1>Elenco Utenti Inseriti</h1>
     <div id="tabellaRisultati"></div>
+    <button onclick="window.location.href='anagrafica4.html'">Aggiungi un altro utente</button>
 
     <script>
         const utenti = JSON.parse(localStorage.getItem('utenti'));
