--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li><a href="tabellaMigranti2.html">Tabella Migranti 2</a></li>
                     <li><a href="anagrafica3.html">anagrafica con file reader</a></li>
                     <li><a href="anagrafica4.html">anagrafica con collection</a></li>
+                    <li><a href="E-commerce.html"> e-commerce</li>
         </ul>
     </div>
 
