Update Compito-quinta 1.1 .html

--- a/Compito-quinta 1.1 .html
+++ b/Compito-quinta 1.1 .html
@@ -67,7 +67,7 @@
 
     var xmlhttp = new XMLHttpRequest();
 
-    xmlhttp.open("GET", "prova.json", true);
+    xmlhttp.open("GET", "anagrafica.json", true);
 
     xmlhttp.send();
 
