--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -26,8 +26,8 @@
             <tr>
                 <th>Nome</th>
                 <th>Cognome</th>
-                <th>Indirizzo</th>
-                <th>Giorno di Nascita</th>
+                <th>Data di nascita</th>
+                <th>Generazione</th>
                 
             </tr>
         </thead>
