--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -80,7 +80,7 @@
 
      for (x in myObj.auto) {
 
-         stampa +="<th>" + myObj.auto[x].tipo + ": " + myObj.auto[x].nome + "</th>";
+         stampa +="<th>" + myObj.nome[x] + ": " + myObj.cognome[x] +  myObj.anno_nascita[x] +  "</th>";
 
       }
 
