--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -78,9 +78,9 @@
 
     stampa += "<th>" + myObj.nome + "</th><br>"
 
-     for (x in myObj.auto) {
+     for (x in myObj) {
 
-         stampa +="<th>" + myObj.nome[x] + ": " + myObj.cognome[x] +  myObj.anno_nascita[x] +  "</th>";
+         stampa +="<th>" + myObj.nome[x] + ": " + myObj.cognome[x] +  myObj.data_nascita[x] +  "</th>";
 
       }
 
