--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -112,7 +112,7 @@
 
      for (x in myObj) {
 
-         stampa +="<th>" + myObj.nome[x] + ": " + myObj.cognome[x] +  myObj.data_nascita[x] +  "</th>";
+         stampa +="<tr>" + myObj.nome[x] + ": " + myObj.cognome[x] +  myObj.data_nascita[x] +  "</tr>";
 
       }
 
