--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -108,7 +108,7 @@
 
         var myObj = JSON.parse(this.responseText);
 
-    stampa += "<th>" + myObj.nome + "</th>"
+    stampa += "<tr>" + myObj.nome + "</tr>"
 
      for (x in myObj) {
 
