--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -125,7 +125,7 @@
 
     stampa += "<tr>" + myObj.nome + "</tr>"
 
-     for (x in myObj) {
+     for (x in myObj[x]) {
 
          stampa +="<th>" + myObj.nome[x] + ": " + myObj.cognome[x] +  myObj.data_nascita[x] +  "</th>";
 
