--- a/Compito-quinta1,1.html
+++ b/Compito-quinta1,1.html
@@ -58,6 +58,7 @@ function generazione(anno) {
   else if (anno >= 1981) return "Millennials";
   else if (anno >= 1965) return "X";
   else if (anno >= 1946) return "Boomers";
+  else if (anno >= 1923) return "Silent Generation";
   else return "Altro";
 }
 
