--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div class="content">
         <h2 style="color:MediumSeaGreen;">Link ai lavori:</h2>
         <ul class="links">
+                    <li> CLASSE QUARTA</li>
                     <li><a href="lavoro1.html">Esempio di html</a></li>
                     <li><a href="cicloFor.html">Ciclo for</a></li>
                     <li><a href="contaCifre.html">Contatore di cifre</a></li>
@@ -58,7 +59,8 @@
                     <li><a href="anagrafica3.html">anagrafica con file reader</a></li>
                     <li><a href="anagrafica4.html">anagrafica con collection</a></li>
                     <li><a href="E-commerce.html"> e-commerce</li>
-                    <li><a href="Compito-quinta1,1.html"> e-commerce</li>
+                    <li> CLASSE QUINTA</li>
+                    <li><a href="Compito-quinta1,1.html"> anagrafica 1.1</li>
         </ul>
     </div>
 
