--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li><a href="anagrafica4.html">anagrafica con collection</a></li>
                     <li><a href="E-commerce.html"> e-commerce</li>
                     <li> CLASSE QUINTA</li>
-                    <li><a href="Compito-quinta1,1.html"> anagrafica 1.1</li>
+                    <li><a href="Compito-quinta1,1.html">lavoro 1.1: anagrafica </li>
         </ul>
     </div>
 
