--- a/anagrafica-2,2.html
+++ b/anagrafica-2,2.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+<html lang="it">
+  <head>
+    <meta charset="UTF-8">
+    <title>Anagrafica Utenti</title>
+    <style>
+      table {border-collapse: collapse; width: 100%;}
+      th, td {border: 1px solid black; padding: 5px;}
+    </style>
+  </head>
+<body>
+<h2>Anagrafica Utenti </h2>
 
+<input type="text" id="lettera" placeholder="Lettera iniziale">
+<button onclick="filtra()">Filtra</button>
+<button onclick="maggiorenni()">Maggiorenni</button>
+
+<br><br>
+
+<input type="number" id="annoInput" placeholder="Inserisci anno">
+<button onclick="mostraGenerazione()">Generazione</button>
+<p id="gen"></p>
+
+<table>
+<thead>
+<tr><th>Nome</th><th>Cognome</th><th>Anno</th><th>Generazione</th></tr>
+</thead>
+<tbody id="demo"></tbody>
+</table>
+
+<script>
+var utenti = [];
+
+
+var richiesta = new XMLHttpRequest();
+richiesta.open("GET", "anagrafica.xml");
+richiesta.onload = function() {
+  utenti = new DOMParser(richiesta.responcetext);
+  mostra(utenti);
+};
+richiesta.send();
+
+
+function mostra(lista) {
+  var testo = "";
+  for (var i = 0; i < lista.length; i++) {
+    testo += "<tr><td>" + lista[i].nome + "</td><td>" + lista[i].cognome +
+             "</td><td>" + lista[i].anno + "</td><td>" +
+             generazione(lista[i].anno) + "</td></tr>";
+  }
+  document.getElementById("demo").innerHTML = testo;
+}
+
+
+function generazione(anno) {
+  if (anno >= 2013) return "Alpha";
+  else if (anno >= 1997) return "Z";
+  else if (anno >= 1981) return "Millennials";
+  else if (anno >= 1965) return "X";
+  else if (anno >= 1946) return "Boomers";
+  else if (anno >= 1923) return "Silent Generation";
+  else return "Altro";
+}
+
+
+function filtra() {
+  var lettera = document.getElementById("lettera").value;
+  var risultato = [];
+  for (var i = 0; i < utenti.length; i++) {
+    var iniziale = utenti[i].cognome[0];
+    if (iniziale == lettera) {
+      risultato.push(utenti[i]);
+    }
+  }
+  mostra(risultato);
+}
+
+
+function maggiorenni() {
+  var risultato = [];
+  const d = new Date();
+  for (var i = 0; i < utenti.length; i++) {
+    if (d.getFullYear() - utenti[i].anno >= 18) {
+      risultato.push(utenti[i]);
+    }
+  }
+  mostra(risultato);
+}
+
+
+function mostraGenerazione() {
+  var anno = document.getElementById("annoInput").value;
+  if (anno == "") return;
+  document.getElementById("gen").innerText = "Appartiene a: " + generazione(anno);
+}
+</script>
+</body>
+</html>
