--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                     <li><a href="anagrafica4.html">anagrafica con collection</a></li>
                     <li><a href="E-commerce.html"> e-commerce</li>
                     <li> CLASSE QUINTA</li>
-                    <li><a href="Compito-quinta1,1.html">lavoro 1.1: anagrafica </li>
+                    <li><a href="Compito-quinta1,1.html">lavoro 1.1: anagrafica con json </li>
+                    <li><a href="anagrafica-2,2.html">lavoro 2.2: anagrafica con XML </li>
         </ul>
     </div>
 
