--- a/E-Commerce(2,22).html
+++ b/E-Commerce(2,22).html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div id="uploadPage" class="page active">
-        <h1>Carica file JSON</h1>
+        <h1>Entra nel negozio</h1>
         <input type="file" id="jsonFile">
         <button onclick="loadFile()">Carica</button>
     </div>
